Stabilise code. Add some functionnality to launch plugins without have to manipulate java reflect.